--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.font-size-1 {
+    font-size: 1em;
+}
+
+.font-size-2 {
+    font-size: 1.2em;
+}
+
+.font-size-3 {
+    font-size: 1.4em;
+}
+
+.font-size-4 {
+    font-size: 1.6em;
+}
+
+.font-size-5 {
+    font-size: 1.8em;
+}
+
+.font-size-6 {
+    font-size: 2em;
+}
