on product-list

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,29 @@
 <app-navbar></app-navbar>
 
+<div class="bg-white py-5">
+    <div class="container">
 
-HOME
+        <h1>Bienvenue sur notre site</h1>
+
+        <div class="create-account">
+
+            <div class="text-side">
+                <h2 class="title">Démarrer</h2>
+                <p class="text">Créez un compte pour bénéficier de tarifs préférentiels et vendre vos livres</p>
+                <p class="button-container"><button>Créer un compte</button></p>
+            </div>
+
+            <div class="img-container">
+                <img src="../../../assets/images/gulfer-ergin-LUGuCtvlk1Q-unsplash.jpg" alt="">
+            </div>
+            
+
+        </div>
+
+
+    </div>
+
+</div>
 
 
 
