--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -1,1 +1,51 @@
-<p>product-list works!</p>
+<app-navbar></app-navbar>
+
+
+<div class="product-list-container">
+
+
+    <div class="container">
+
+        <div class="row">
+
+
+
+            <div class="col-3 filter-part">
+                <p class="title">Affiner les résultats par : <i class="fa-solid fa-angle-down"></i></p>
+
+                <div class="filter-list">
+
+                    <div class="language-filter">
+                        <p class="title"><button class="hide-button-style">Langue <i class="fa-solid fa-angle-down"></i></button> </p>
+                        <div class="option-list">
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">English</button><span class="number_items">3509</span></p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">French</button><span class="number_items">379</span></p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">Spanish</button><span class="number_items">147</span></p>
+                        </div>
+                    </div>
+
+                    <div class="number-page-filter">
+                        <p class="title"><button class="hide-button-style">Nombre de pages <i class="fa-solid fa-angle-down"></i></button></p>
+                        <div class="option-list">
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">0 - 150</button><span class="number_items">3509</span></p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">150 - 300</button><span class="number_items">379</span></p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">300 - 500</button><span class="number_items">147</span></p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-9">
+
+            </div>
+
+
+
+        </div>
+
+
+    </div>
+
+
+</div>
