--- a/src/app/tools/navbar/navbar.component.html
+++ b/src/app/tools/navbar/navbar.component.html
@@ -24,35 +24,46 @@
         <div class="nav-categories" *ngIf="openCategories">
 
             <div>
+                <p><a routerLink="">Arts & photographie</a></p>
+                <p><a routerLink="">Biographies & mémoires</a></p>
+                <p><a routerLink="">Commerce & économie</a></p>
+                <p><a routerLink="">Jeunesse</a></p>
+                <p><a routerLink="">Bandes Dessinées & romans graphiques</a></p>
+                <p><a routerLink="">Informatique & internet</a></p>
+                <p><a routerLink="">Cuisine</a></p>
+                <p><a routerLink="">Loisirs & bricolage</a></p>
+                <p><a routerLink="">Éducation & langues</a></p>
+
+            </div>
+            <div>
+                <p><a routerLink="">Ingénierie</a></p>
+                <p><a routerLink="">Divertissement</a></p>
+                <p><a routerLink="">Familles & relations interpersonnelles</a></p>
                 <p><a routerLink="">Jeux</a></p>
-                <p><a routerLink="">Véhicules miniatures</a></p>
-                <p><a routerLink="">Figurines</a></p>
-                <p><a routerLink="">Maquettes</a></p>
-                <p><a routerLink="">Modélisme</a></p>
-    
+                <p><a routerLink="">Fiction</a></p>
+                <p><a routerLink="">Santé & forme</a></p>
+                <p><a routerLink="">Histoire</a></p>
+                <p><a routerLink="">Maison & jardin</a></p>
+                <p><a routerLink="">Humour</a></p>
+
             </div>
             <div>
-                <p><a routerLink="">Lifestyle</a></p>
-                <p><a routerLink="">Instruments de musique</a></p>
-                <p><a routerLink="">Guitares, basses, accessoires</a></p>
+                <p><a routerLink="">Droit</a></p>
+                <p><a routerLink="">Musique</a></p>
+                <p><a routerLink="">Développement personnel</a></p>
+                <p><a routerLink="">Animaux de compagnie</a></p>
+                <p><a routerLink="">Poésie</a></p>
+                <p><a routerLink="">Référence</a></p>
+                <p><a routerLink="">Religions & spiritualités</a></p>
+                <p><a routerLink="">Médecine & sciences</a></p>
+                <p><a routerLink="">Sciences humaines</a></p>
+
+            </div>
+            <div>
                 <p><a routerLink="">Sports</a></p>
-                <p><a routerLink="">Fitness</a></p>
-                
-            </div>
-            <div>
-                <p><a routerLink="">Gastronomie</a></p>
-                <p><a routerLink="">Vins</a></p>
-                <p><a routerLink="">Epicerie</a></p>
-                <p><a routerLink="">Pâtes à fruit</a></p>
-                
-            </div>
-            <div>
-                <p><a routerLink="">Media</a></p>
-                <p><a routerLink="">Livres, BD, revues</a></p>
-                <p><a routerLink="">DVD, cinéma</a></p>
-                <p><a routerLink="">Musique, CD, vinyles</a></p>     
-            </div>
-    
+                <p><a routerLink="">Voyages & aventures</a></p>
+                <p><a routerLink="">Jeunes adultes</a></p>
+            </div>        
         </div>
 
     </div>
