--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -5,10 +5,7 @@
 
 
     <div class="container">
-
         <div class="row">
-
-
 
             <div class="col-3 filter-part">
                 <p class="title">Affiner les résultats par : <i class="fa-solid fa-angle-down"></i></p>
@@ -16,27 +13,73 @@
                 <div class="filter-list">
 
                     <div class="language-filter">
-                        <p class="title"><button class="hide-button-style">Langue <i class="fa-solid fa-angle-down"></i></button> </p>
+                        <p class="title"><button class="hide-button-style">Langue <i
+                                    class="fa-solid fa-angle-down"></i></button> </p>
                         <div class="option-list">
-                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">English</button><span class="number_items">3509</span></p>
-                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">French</button><span class="number_items">379</span></p>
-                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">Spanish</button><span class="number_items">147</span></p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button
+                                    class="hide-button-style">English</button><span class="number_items">3509</span></p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button
+                                    class="hide-button-style">French</button><span class="number_items">379</span></p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button
+                                    class="hide-button-style">Spanish</button><span class="number_items">147</span></p>
                         </div>
                     </div>
 
                     <div class="number-page-filter">
-                        <p class="title"><button class="hide-button-style">Nombre de pages <i class="fa-solid fa-angle-down"></i></button></p>
+                        <p class="title"><button class="hide-button-style">Nombre de pages <i
+                                    class="fa-solid fa-angle-down"></i></button></p>
                         <div class="option-list">
-                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">0 - 150</button><span class="number_items">3509</span></p>
-                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">150 - 300</button><span class="number_items">379</span></p>
-                            <p class="d-flex justify-content-between align-items-md-baseline"><button class="hide-button-style">300 - 500</button><span class="number_items">147</span></p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button
+                                    class="hide-button-style">0 - 150</button><span class="number_items">3509</span></p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button
+                                    class="hide-button-style">150 - 300</button><span class="number_items">379</span>
+                            </p>
+                            <p class="d-flex justify-content-between align-items-md-baseline"><button
+                                    class="hide-button-style">300 - 500</button><span class="number_items">147</span>
+                            </p>
                         </div>
                     </div>
                 </div>
 
             </div>
 
-            <div class="col-9">
+            <div class="col-8 product-list-part">
+
+
+                <div class="container-product">
+
+                    <div class="product d-flex">
+
+                        <div class="img-container"><img src="https://picsum.photos/200/300" alt=""></div>
+
+                        <div class="infos d-flex flex-column">
+                            <p class="title">Titre du livre</p>
+                            <p class="contributor-container"><span>By </span><span class="contributor-name">Pauline
+                                    Viardot</span></p>
+                            <div class="d-flex align-items-center evaluation">
+                                <div class="d-flex number-stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <div class="number-evaluation">3 évaluations</div>
+                            </div>
+                            <div class="publication-date">Publié le 01/05/2016</div>
+                            <div class="bottom-block d-flex justify-content-between align-items-end">
+                                <div class="price">EUR 16.90</div>
+                                <div class="actions cursor-pointer">
+                                    <i class="fa-solid fa-file"></i>
+
+                                </div>
+                            </div>
+                            
+                        </div>
+
+                    </div>
+
+                </div>
 
             </div>
 
