--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,20 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: transparent;
 }
 
+* {
+    box-sizing: content-box !important;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
 
 .font-size-1 {
     font-size: 1em;
