--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -46,16 +46,16 @@
             <div class="col-8 product-list-part">
 
 
-                <div class="container-product">
+                <div class="container-product" *ngFor="let product of products">
 
-                    <div class="product d-flex">
+                    <div class="product d-flex" >
 
                         <div class="img-container"><img src="https://picsum.photos/200/300" alt=""></div>
 
                         <div class="infos d-flex flex-column">
-                            <p class="title">Titre du livre</p>
-                            <p class="contributor-container"><span>By </span><span class="contributor-name">Pauline
-                                    Viardot</span></p>
+                            <p class="title">{{ product.title }}</p>
+                            <p class="contributor-container"><span>By </span>
+                                <span class="contributor-name">{{ product.contributor.name }}</span></p>
                             <div class="d-flex align-items-center evaluation">
                                 <div class="d-flex number-stars">
                                     <i class="fa-solid fa-star"></i>
@@ -66,11 +66,11 @@
                                 </div>
                                 <div class="number-evaluation">3 évaluations</div>
                             </div>
-                            <div class="publication-date">Publié le 01/05/2016</div>
+                            <div class="publication-date">Publié le {{ op.getFormatDate(product.publication_date)  }}</div>
                             <div class="bottom-block d-flex justify-content-between align-items-end">
-                                <div class="price">EUR 16.90</div>
+                                <div class="price">EUR {{ product.price }}</div>
                                 <div class="actions cursor-pointer">
-                                    <i class="fa-solid fa-file"></i>
+                                    <a routerLink="/product-detail" class="hide-button-style"><i class="fa-solid fa-file"></i></a>
 
                                 </div>
                             </div>
