--- a/src/app/pages/product-list/product-list.component.scss
+++ b/src/app/pages/product-list/product-list.component.scss
@@ -72,9 +72,14 @@ $marine-color: #000083;
     
                 .img-container {
                     width: 200px;
-                    height: 100%;
-    
+                    height: 300px;
                     overflow: hidden;
+
+                    img {
+                        width: 200px;
+                        height: 300px;
+                        object-fit: contain;
+                    }
                 }
     
                 .infos {
@@ -82,7 +87,7 @@ $marine-color: #000083;
                     flex-grow: 1;
     
                     >.title {
-                        font-size: 2em;
+                        font-size: 1.5em;
                     }
     
                     .contributor-container {
