--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -3,7 +3,6 @@
 
 <div class="product-list-container">
 
-
     <div class="container">
         <div class="row">
 
@@ -56,6 +55,9 @@
                             <p class="title">{{ product.title }}</p>
                             <p class="contributor-container"><span>By </span>
                                 <span class="contributor-name">{{ product.contributor.name }}</span></p>
+                            
+                            <p class="category">{{product.category.title}}</p>
+
                             <div class="d-flex align-items-center evaluation">
                                 <div class="d-flex number-stars">
                                     <i class="fa-solid fa-star"></i>
