--- a/src/app/tools/navbar/navbar.component.html
+++ b/src/app/tools/navbar/navbar.component.html
@@ -11,7 +11,8 @@
                     class="fa-solid fa-magnifying-glass"></i></button>
             <button class=""><i class="fa-solid fa-cart-shopping"></i></button>
             <div class="user-container">
-                <button (click)="openUserPanel=!openUserPanel" [ngClass]="{'focus-button' : openUserPanel}"><i class="fa-solid fa-user"></i></button>
+                <button (click)="openUserPanel=!openUserPanel" [ngClass]="{'focus-button' : openUserPanel}"><i
+                        class="fa-solid fa-user"></i></button>
 
                 <div class="user-actions " *ngIf="openUserPanel">
                     <div class="arrow-dropdown"><i class="fa-solid fa-caret-up"></i></div>
@@ -32,54 +33,11 @@
         </div>
 
         <div class="nav-categories" *ngIf="openCategories">
-
-            <div>
-                <p><a routerLink="">Arts & photographie</a></p>
-                <p><a routerLink="">Biographies & mémoires</a></p>
-                <p><a routerLink="">Commerce & économie</a></p>
-                <p><a routerLink="">Jeunesse</a></p>
-                <p><a routerLink="">Bandes Dessinées & romans graphiques</a></p>
-                <p><a routerLink="">Informatique & internet</a></p>
-                <p><a routerLink="">Cuisine</a></p>
-                <p><a routerLink="">Loisirs & bricolage</a></p>
-                <p><a routerLink="">Éducation & langues</a></p>
-
+            <div *ngFor="let category of categories">
+                <a (click)="openSearch=!openSearch" routerLink="/product-list/{{ category.code }}">{{category.title}}</a>
             </div>
-            <div>
-                <p><a routerLink="">Ingénierie</a></p>
-                <p><a routerLink="">Divertissement</a></p>
-                <p><a routerLink="">Familles & relations interpersonnelles</a></p>
-                <p><a routerLink="">Jeux</a></p>
-                <p><a routerLink="">Fiction</a></p>
-                <p><a routerLink="">Santé & forme</a></p>
-                <p><a routerLink="">Histoire</a></p>
-                <p><a routerLink="">Maison & jardin</a></p>
-                <p><a routerLink="">Humour</a></p>
-
-            </div>
-            <div>
-                <p><a routerLink="">Droit</a></p>
-                <p><a routerLink="">Musique</a></p>
-                <p><a routerLink="">Développement personnel</a></p>
-                <p><a routerLink="">Animaux de compagnie</a></p>
-                <p><a routerLink="">Poésie</a></p>
-                <p><a routerLink="">Référence</a></p>
-                <p><a routerLink="">Religions & spiritualités</a></p>
-                <p><a routerLink="">Médecine & sciences</a></p>
-                <p><a routerLink="">Sciences humaines</a></p>
-
-            </div>
-            <div>
-                <p><a routerLink="">Sports</a></p>
-                <p><a routerLink="">Voyages & aventures</a></p>
-                <p><a routerLink="">Jeunes adultes</a></p>
-            </div>        
         </div>
 
     </div>
-
-
-
-
 
 </div>
