--- a/src/app/tools/navbar/navbar.component.html
+++ b/src/app/tools/navbar/navbar.component.html
@@ -16,8 +16,8 @@
 
                 <div class="user-actions " *ngIf="openUserPanel">
                     <div class="arrow-dropdown"><i class="fa-solid fa-caret-up"></i></div>
-                    <div class="action flex-center cursor-pointer">S'inscrire</div>
-                    <div class="action flex-center cursor-pointer">Se connecter</div>
+                    <div class="action flex-center cursor-pointer" routerLink="/register">S'inscrire</div>
+                    <div class="action flex-center cursor-pointer" routerLink="/login">Se connecter</div>
                 </div>
 
 
