--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,46 @@
-<p>login works!</p>
+<div class="login-container">
+
+
+    <div class="login-box">
+
+        <div class="img-container"><img src="../../../assets/images/PeterM-Feather-2.svg"></div>
+
+        <p class="title">Se connecter</p>
+
+        <form action="" [formGroup]="userForm" #form="ngForm">
+
+            <div class="field" id="username">
+                <input type="text" id="username-input" placeholder='' formControlName="username">
+                <label for="username-input">Pseudo *</label>
+            </div>
+
+            <div class="field" id="password">
+                <input type="text" id="password-input" placeholder='' formControlName="password">
+                <label for="password-input">Mot de passe *</label>
+            </div>
+
+            <button (click)="login()" class="connect-btn">Se connecter</button>
+
+            <div [ngClass]="{'message': true, 'error' : (state == 'ERROR_FORM' || state == 'ERROR_LOGIN'),
+                'success': state == 'CONNECTED'}">
+                <p>{{message}}</p>
+            </div>
+        </form>
+
+        <div class="block1">
+            <div class="back">
+                <button routerLink=""><i class="fa-solid fa-circle-left"></i><span>Retour</span></button>
+            </div>
+            <div class="forget-password">
+                <button>
+                    <i class="fa-solid fa-circle-question"></i>
+                    <span>Mot de passe oublié ?</span>
+                </button>
+            </div>
+            
+        </div>
+
+
+    </div>
+
+</div>
