--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -10,22 +10,27 @@
         <form action="" [formGroup]="userForm" #form="ngForm">
 
             <div class="field" id="lastname" >
-                <input type="text" id="lastname-input" placeholder='' formControlName="lastname">
+                <input type="text" id="lastname-input" placeholder='' formControlName="lastname" [(ngModel)]="user.lastname">
                 <label for="lastname-input">Nom *</label>
             </div>
 
             <div class="field" id="firstname" >
-                <input type="text" id="firstname-input" placeholder='' formControlName="firstname">
+                <input type="text" id="firstname-input" placeholder='' formControlName="firstname" [(ngModel)]="user.firstname">
                 <label for="firstname-input">Prénom *</label>
             </div>
 
             <div class="field" id="email" >
-                <input type="text" id="email-input" placeholder='' formControlName="email">
+                <input type="text" id="email-input" placeholder='' formControlName="email" [(ngModel)]="user.email">
                 <label for="email-input">Email *</label>
             </div>
 
+            <div class="field" id="username" >
+                <input type="text" id="username-input" placeholder='' formControlName="username" [(ngModel)]="user.username">
+                <label for="username-input">Pseudo *</label>
+            </div>
+
             <div class="field" id="password" >
-                <input type="text" id="password-input" placeholder='' formControlName="password">
+                <input type="text" id="password-input" placeholder='' formControlName="password" [(ngModel)]="user.password">
                 <label for="password-input">Mot de passe *</label>
             </div>
 
@@ -38,11 +43,17 @@
 
             <div class="errors">
                 <div *ngFor="let error of errorsDisplay">{{error}}</div>
-
             </div>
-            
+
+            <p>{{message}}</p>
 
         </form>
+
+        <div class="block1">
+            <div class="back">
+                <button routerLink=""><i class="fa-solid fa-circle-left"></i><span>Retour</span></button>
+            </div>
+        </div>
 
 
     </div>
