--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -72,7 +72,7 @@
                             <div class="bottom-block d-flex justify-content-between align-items-end">
                                 <div class="price">EUR {{ product.price }}</div>
                                 <div class="actions cursor-pointer">
-                                    <a routerLink="/product-detail" class="hide-button-style"><i class="fa-solid fa-file"></i></a>
+                                    <a routerLink="/product-detail/{{product._id}}" class="hide-button-style"><i class="fa-solid fa-file"></i></a>
 
                                 </div>
                             </div>
