--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -33,6 +33,16 @@
             </div>
         </div>
 
+        <div class="subtotal">
+            <span class="label">Sous-total de la commande</span>
+            <span class="value">EUR 290.40</span>
+        </div>
+
+        <div class="actions">
+            <button class="continue-shopping-btn">Continuer mes achats</button>
+            <button class="validate-order-btn">Valider la commande</button>
+        </div>
+
 
 
     </div>
