--- a/src/app/pages/cart/cart.component.scss
+++ b/src/app/pages/cart/cart.component.scss
@@ -117,7 +117,7 @@ $light-grey: #dedede;
 
                 .price-total-product {
                     color: $marine-color;
-                    font-weight: bold;
+                    font-weight: 500;
                     font-size: 1.3em;
                 }
 
@@ -128,6 +128,56 @@ $light-grey: #dedede;
                 }
 
 
+            }
+
+        }
+
+        .subtotal {
+            padding: 30px 0;
+            background-color: aliceblue;
+            font-size: 1.4em;
+            display: flex;
+            justify-content: end;
+
+            .label {
+                font-weight:300;
+
+            }
+
+            .value {
+                margin-left: 10px;
+                margin-right: 40px;
+                font-weight:700;
+
+            }
+
+        }
+
+
+        .actions {
+            margin-top: 60px;
+            display: flex;
+            justify-content: space-between;
+
+            button {
+                font-size: 1.4em;
+                padding: 15px 30px;
+                border: none;
+                border-radius: 3px
+            }
+
+            .continue-shopping-btn {
+                color: $marine-color;
+                background-color: $blue-sky;
+            }
+
+            .validate-order-btn {
+                color: $marine-color;
+                background-color: white;
+                border: 1px solid $marine-color;
+                // transition: all ease-in-out 0.1s;
+
+                &:hover {background-color: aliceblue;}
             }
 
         }
