begin contact delivery

--- a/src/app/tools/navbar/navbar.component.html
+++ b/src/app/tools/navbar/navbar.component.html
@@ -44,7 +44,7 @@
     </div>
     <div class="nav-bottom" *ngIf="openSearch">
         <div class="nav-search d-flex justify-content-center align-items-center">
-            <input type="text" placeholder="Rechercher dans le bazar">
+            <input type="text" placeholder="Rechercher un livre">
             <button (click)="openCategories=!openCategories"><span>Afficher les catégories</span>
                 <i class="fa-solid fa-angle-{{openCategories == false ? 'down' : 'up'}}"></i></button>
         </div>
