--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -39,8 +39,8 @@
         </div>
 
         <div class="actions">
-            <button class="continue-shopping-btn">Continuer mes achats</button>
-            <button class="validate-order-btn">Valider la commande</button>
+            <button class="continue-shopping-btn" routerLink="/product-list">Continuer mes achats</button>
+            <button class="validate-order-btn" routerLink="/contact-delivery">Valider la commande</button>
         </div>
 
 
